<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_20sdp"
    app:cardElevation="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/dialog_change_password_tv_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_change_password_tv_old_password"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_change_password_til_old_password"
            style="@style/text_input2"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_below="@+id/dialog_change_password_tv_old_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_change_password_tiet_old_password"
                style="@style/text_input_edit2"
                android:drawableStart="@drawable/ic_lock_solid"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/dialog_change_password_btn_confirm"
            style="@style/btn3"
            android:background="@drawable/shape_et_2"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/dialog_change_password_btn_confirm"
            android:layout_below="@+id/dialog_change_password_til_old_password"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>