<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/reset_password_fragment_rel_sub_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/reset_password_fragment_til_pin_code"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_logo_white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reset_password_fragment_til_pin_code"
                style="@style/text_input2"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dim_4dp"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/dim_4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reset_password_fragment_tiet_pin_code"
                    style="@style/text_input_edit2"
                    android:hint="@string/pin_code"
                    android:layout_marginStart="@dimen/dim_8dp"
                    android:layout_marginEnd="@dimen/dim_8dp"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reset_password_fragment_til_password"
                style="@style/text_input2"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dim_4dp"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/dim_4dp"
                android:layout_below="@+id/reset_password_fragment_til_pin_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reset_password_fragment_tiet_password"
                    style="@style/text_input_edit2"
                    android:layout_marginStart="@dimen/dim_8dp"
                    android:layout_marginEnd="@dimen/dim_8dp"
                    android:inputType="textPassword"
                    android:hint="@string/new_password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reset_password_fragment_til_password_confirmation"
                style="@style/text_input2"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dim_4dp"
                android:layout_marginBottom="@dimen/dim_4dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/dim_4dp"
                android:layout_below="@+id/reset_password_fragment_til_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reset_password_fragment_tiet_password_confirmation"
                    style="@style/text_input_edit2"
                    android:layout_marginStart="@dimen/dim_8dp"
                    android:layout_marginEnd="@dimen/dim_8dp"
                    android:inputType="textPassword"
                    android:hint="@string/new_password_confirmation" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/reset_password_fragment_btn_change"
                style="@style/btn3"
                android:layout_below="@id/reset_password_fragment_til_password_confirmation"
                android:text="@string/send" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>