<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/more_fragment_rel_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_heart_solid"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_20ssp"
            android:text="@string/favourites"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/list_view_seperator_line_color"
        />

    <LinearLayout
        android:id="@+id/more_fragment_rel_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_email_red"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_20ssp"
            android:text="@string/contact_us"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/list_view_seperator_line_color"
        />

    <LinearLayout
        android:id="@+id/more_fragment_rel_about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_about_app"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_20ssp"
            android:text="@string/about_app"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/list_view_seperator_line_color"
        />

    <LinearLayout
        android:id="@+id/more_fragment_rel_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_star_solid"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_20ssp"
            android:text="@string/rate_app"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/list_view_seperator_line_color"
        />

    <LinearLayout
        android:id="@+id/more_fragment_rel_notifications_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_cog_solid"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_20ssp"
            android:text="@string/notifications_settings"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/list_view_seperator_line_color"
        />

    <LinearLayout
        android:id="@+id/more_fragment_rel_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_sign_out_alt_solid"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_20ssp"
            android:text="@string/sign_out"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>


</LinearLayout>